update gradle logic